# tyapik_Gilko_Broyko

./: CMakeLists.txt  main.cpp  Грамматика.txt
include/pxx/AST/: AST.hpp  ASTNode.hpp  ASTNodePublic.hpp
include/pxx/codegen/: CodeEmittingNodeVisitor.hpp  CodeGenerator.hpp
include/pxx/interface/: ASTNodeInterface.hpp  CodeGeneratorInterface.hpp  LexerInterface.hpp  LexerStateInterface.hpp  NodeVisitorInterface.hpp  ParserInterface.hpp  SemanticAnalyzerInterface.hpp  VisitableNodeInterface.hpp
include/pxx/lexer/: FileData.hpp  Lexer.hpp  LexerStates.hpp
include/pxx/optimizer/: CalculateVisitor.hpp  Optimizer.hpp  ShortenExpressionVisitor.hpp
include/pxx/parser/: Parser.hpp
include/pxx/semanalyzer/: SemanticAnalyzer.hpp  SemanticVisitor.hpp  Symbol.hpp
include/pxx/token/: Token.hpp
src/pxx/: AST.cpp  ASTNode.cpp  CalculateVisitor.cpp  CodeEmittingNodeVisitor.cpp  CodeGenerator.cpp  FileData.cpp  Lexer.cpp  LexerStates.cpp  Optimizer.cpp  Parser.cpp  SemanticAnalyzer.cpp  SemanticVisitor.cpp  ShortenExpressionVisitor.cpp  Symbol.cpp  Token.cpp
Прога/code examples/: input.pas  lexer_output.txt  optimized_output.cpp  output.cpp  parser_output.txt
